<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_client_area">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_shop"
                    android:icon="@drawable/ic_shop"
                    android:title="@string/menu_shop" />
                <item
                    android:id="@+id/nav_basket"
                    android:icon="@drawable/ic_cart"
                    android:title="@string/menu_basket" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_admin_area">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sales"
                    android:icon="@drawable/ic_sales"
                    android:title="@string/menu_sales" />
                <item
                    android:id="@+id/nav_products"
                    android:icon="@drawable/ic_products"
                    android:title="@string/menu_products" />
                <item
                    android:id="@+id/nav_clients"
                    android:icon="@drawable/ic_person"
                    android:title="@string/menu_clients" />
            </group>
        </menu>
    </item>

</menu>


