<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_title"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_title"
        android:layout_margin="@dimen/title_margin"/>

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:inputType="textPersonName"
        android:hint="@string/add_product_name"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:inputType="numberDecimal"
        android:hint="@string/add_product_price"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:inputType="number"
        android:hint="@string/add_product_quantity"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/submitProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_product_submit"
        android:background="@color/colorButtonAccept"
        android:layout_gravity="center"/>

</LinearLayout>